file uploading and getting done, need to check uploading, curl works wrong
