# internal/models/ad.go
@@ -35,3 +35,35 @@ type Ad struct {
 type AdCreationResult struct {
 	AdId int64 `json:"ad_id,omitempty"`
 }
+
+type AdForUsers struct {
+	AdId int64 `json:"ad_id,omitempty"`
+
+	Author User `json:"author,omitempty"`
+
+	Header string `json:"header"`
+
+	Text string `json:"text"`
+
+	Region string `json:"region"`
+
+	District string `json:"district,omitempty"`
+
+	IsAuction bool `json:"is_auction"`
+
+	FeedbackType string `json:"feedback_type"`
+
+	ExtraField string `json:"extra_field"`
+
+	CreationDate string `json:"creation_date,omitempty"`
+
+	GeoPosition *GeoPosition `json:"geo_position,omitempty"`
+
+	Status string `json:"status,omitempty"`
+
+	PathesToPhoto []string `json:"pathes_to_photo,omitempty"`
+
+	Category string `json:"category"`
+
+	CommentsCount int32 `json:"comments_count,omitempty"`
+}
